<resources>
    <string name="app_name">Text</string>
    <string name="facebook_app_id">2103139036597610</string>
    <string name="fb_login_protocol_scheme">fb173045950074909</string>
    <string name="mobilenumorusername"><font size="12" />Mobile number or Username</string>
    <string name="password">Password</string>
    <string name="rememberme">Remember Me</string>
    <string name="forgetpass"><u>Forgot Password?</u></string>
    <string name="forotpass">Forgot Password</string>
    <string name="login">login</string>
    <string name="username">User Name</string>
    <string name="welcometotext">Welcome to text,</string>
    <string name="loginwithfb">Login with Facebook</string>
    <string name="loginwithgoogle">Login with Google+</string>
    <string name="donthaveaccount">Don\'t have an account?</string>
    <string name="signup"><u>Sign up</u></string>
    <string name="sigup">Sign up</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="or">OR</string>
    <string name="preparing_card">Preparing Card</string>
    <string name="no_storage_card">No Storage Card</string>
    <string name="not_enough_space">Not Enough Space</string>
    <string name="saving_image">Save Image</string>
    <string name="changenumber">Change Number</string>
    <string name="changepassword">Change Password</string>
    <string name="oldpassword">Old Password</string>
    <string name="newpassowrd">New Password</string>
    <string name="confirmpass">Confirm New Password</string>
    <string name="emailerromsg">Please enter correct email id or mobile number</string>
    <string name="passerrormsg">*The password you entered is incorrect.Please try again</string>
    <string name="submit">SUBMIT</string>
    <string name="forgetpasswordresetmsg">Don\'t worry about your password. Please enter your registered mobile number. We will send you new password. </string>
    <string name="mobilenumber">Mobile number</string>
    <string name="nouserfound">*No user found.</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="selectgender">Select Gender</string>
    <string name="confirmpas">Confirm Password</string>
    <string name="bytapping">By tapping <font color="@color/black">\"<u>Create Account</u>\"</font> you are agreeing to the <font color="@color/black"><u>Terms &amp; Condition.</u></font></string>
    <string name="createaccount">Create Account</string>
    <string name="alreadyhaveaccount">Already have an account? </string>
    <string name="loginsmall"><u>Login</u></string>
    <string name="mobilenumbererror">*please enter valid mobile number</string>
    <string name="otp">OTP</string>
    <string name="resendotp"><u>Resend OTP</u></string>
    <string name="findpeopletofollow">Find people to follow, chat with people  in your contact list and chat with  anonymous user.</string>
    <string name="continuu">CONTINUE</string>
    <string name="selectyourgender">Select Your Gender</string>
    <string name="createyourownunique">Create your own unique avatar to express your feelings through various gestures.</string>
    <string name="avtarstyle">Avatar Style</string>
    <string name="checkin">Check In</string>
    <string name="tagpeople">Tag People</string>
    <string name="shareonfacebook">Share on Facebook</string>
    <string name="cancel">Cancel</string>
    <string name="cancelunderline"><u>Cancel</u></string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="story">Story</string>
    <string name="post">Post</string>
    <string name="update_post">Update post</string>
    <string name="golive">Go live</string>
    <string name="tagfollowing">Tag Following</string>
    <string name="skip"><u>Skip</u></string>
    <string name="writesomethinghere">Write something here…</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.</string>
    <string name="weneverreally">We never really grow up,we only learn how to act in public.</string>
    <string name="dummylongtext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</string>
    <string name="stories">Stories</string>
    <string name="watchall">Watch All</string>
    <string name="repost">Repost</string>
    <string name="directshare">Direct Share</string>
    <string name="direct">Direct</string>
    <string name="countrycode">+91</string>
    <string name="namehint">John Thomas</string>
    <string name="male">Male</string>
    <string name="bio">Bio</string>
    <string name="date">26-02-1990</string>
    <string name="schoolname">Xabir public school</string>
    <string name="clg">DDU</string>
    <string name="gender">Gender</string>
    <string name="dateofbirth">Date of Birth</string>
    <string name="school">School</string>
    <string name="college">College</string>
    <string name="worked">Worked At</string>
    <string name="works">Works At</string>
    <string name="hometown">Home Town</string>
    <string name="livesin">Lives in</string>
    <string name="website">Website</string>
    <string name="phnnumber">Phone Number</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="termsandconditions">Terms &amp; Condition</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="aboutus">About Us</string>
    <string name="switchaccount">Switch Account</string>
    <string name="logout">Log Out</string>
    <string name="otptext">OTP</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="upload_video">Upload Video</string>
    <string name="add_location">Add Location</string>
    <string name="poll_length">Poll Length</string>
    <string-array name="gender_option">
        <item>Select Gender</item>
        <item>male</item>
        <item>female</item>
    </string-array>
    <string-array name="language">
        <item>English</item>
        <item>हिन्दी</item>
    </string-array>
    <string-array name="permission_to">
        <item>Everyone</item>
        <item>My Contacts</item>
        <item>Nobody</item>
        <item>Following</item>
    </string-array>
    <string name="skintype">Skin Type</string>
    <string name="haircolor">Hair Color</string>
    <string name="hairstyle">Hair Style</string>
    <string name="beard">Beard</string>
    <string name="beardcolor">Beard Color</string>
    <string name="search">Search</string>
    <string name="block"> Block</string>
    <string name="new_Block_red"><font fgcolor='#FF0000'> Block</font></string>
    <string name="new_report_user_red"><font fgcolor='#FF0000'> Report User</font></string>
    <string name="enable_avatar">Enable Avatar</string>
    <string name="last_seen">Last Seen</string>
    <string name="tagging">Tagging</string>
    <string name="everyone">Everyone</string>
    <string name="following_dialog">Following</string>
    <string name="nobody">Nobody</string>
    <string name="unblock">Unblock</string>
    <string name="itsspam">Its Spam</string>
    <string name="inappropriate">Inappropriate</string>
    <string name="itsfalsestory">Its False Story</string>
    <string name="hatespeech">Hate Speech</string>
    <string name="reveal_your_identity">Reveal Your Identity</string>
    <string name="exit_conversation">Exit Conversation</string>
    <string name="shareprofile">Share Profile</string>
    <string name="turnonstorynotificationoff">Turn off Story Notification</string>
    <string name="turnonpostnotificationoff">Turn off Story Notification</string>
    <string name="private_account">Private Account</string>
    <string name="only_followers_will_see_this_post">Only troll followers will see this post.</string>
</resources>