<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_skinType"
        android:title="@string/skintype"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/flight">
    </item>
    <item
        android:id="@+id/action_hairColor"
        android:title="@string/haircolor"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/flight">
    </item>
    <item
        android:id="@+id/action_hairStyle"
        android:title="@string/hairstyle"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/flight">
    </item>
    <item
        android:id="@+id/action_beard"
        android:title="@string/beard"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/flight">
    </item>
    <item
        android:id="@+id/action_beardColor"
        android:title="@string/beardcolor"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/flight">
    </item>
</menu>