<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <LinearLayout
        android:id="@+id/llContacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_7sdp">
<FrameLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivContactUserPic"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center"
            android:src="@mipmap/profile_icon3" />
    <com.yellowseed.customView.CustomRobotoBoldTextView
        android:id="@+id/tvUserImage"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:background="@drawable/bg_circle_blue"
        android:contentDescription="@string/app_name"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="@dimen/_20ssp"
        android:visibility="gone" />
</FrameLayout>
        <com.yellowseed.customView.CustomRobotoRegularTextView2
            android:id="@+id/tvContactUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight="1"
            android:padding="@dimen/_5sdp"
            android:text="@string/last_seen"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="normal" />
        <ToggleButton
            android:id="@+id/tbBlock"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_rounded_yellow_button"
            android:textAllCaps="false"
            android:textOff="@string/unblock"
            android:textOn="@string/block" />

    <!--    <Button
            android:id="@+id/tbBlock"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_rounded_yellow_button"
            android:textAllCaps="false"
            android:text="@string/block" />-->
    </LinearLayout>
</layout>