<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog"
            android:orientation="vertical">

            <com.yellowseed.customView.CustomRobotoBoldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/tagging"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp" />

            <com.yellowseed.customView.CustomRobotoRegularTextView2
                android:id="@+id/tv_everyone_tagging_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/everyone"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:background="@color/lightblack" />

            <com.yellowseed.customView.CustomRobotoRegularTextView2
                android:id="@+id/tv_following_tagging_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/following_dialog"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:background="@color/lightblack" />

            <com.yellowseed.customView.CustomRobotoRegularTextView2
                android:id="@+id/tv_nobody_tagging_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/nobody"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />
        </LinearLayout>
        <Button
            android:id="@+id/button_cancel_tagging_dialog"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog"
            android:textAllCaps="false"
            android:textColor="@color/blueissh"
            android:textStyle="bold"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_14sdp"
            android:text="@string/cancel"/>
    </LinearLayout>
</layout>