<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/lllayout"
    tools:mContext=".activity.ChangeNumberOtpActivity">

    <include android:id="@+id/toolbarChangeNubmerOtp"
        layout="@layout/customtoolbar"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/viewLineColor"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@mipmap/otp_icon"
        android:layout_marginTop="@dimen/_50sdp"/>

        <com.yellowseed.customView.EditTextArial
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/marginleftright"
            android:layout_marginTop="@dimen/_70sdp"
            android:hint="@string/otp"
            android:padding="@dimen/_10sdp"
            android:singleLine="true"
            android:background="@drawable/bg_rounded_transparent"/>
    <com.yellowseed.customView.CustomRobotoRegularTextView2
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/marginleftright"
        android:text="@string/resendotp"
        android:textSize="@dimen/_8ssp"
        android:textAlignment="viewEnd"
        android:layout_gravity="end"
        android:textColor="@color/lightskyblue"
        android:layout_marginTop="@dimen/_5sdp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/marginleftright"
        android:background="@drawable/bg_yellow"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/submit"/>


</LinearLayout>
</layout>