<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".activity.PrivateShareActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_15sdp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/block_user"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:orientation="vertical">
    <com.yellowseed.customView.CustomRobotoRegularTextView2
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/private_account"/>
    <com.yellowseed.customView.CustomRobotoRegularTextView2
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/only_followers_will_see_this_post"/>
    </LinearLayout>
    </LinearLayout>
    <com.yellowseed.customView.EditTextArial
        android:id="@+id/etSearchChatFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/bg_rounded_transparent"
        android:drawablePadding="@dimen/_2sdp"
        android:drawableStart="@mipmap/search_gray"
        android:hint="@string/search"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLength="100"
        android:maxLines="1"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/lightwhite"
        android:textSize="@dimen/_12ssp"
        android:textStyle="normal" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</LinearLayout>
</layout>