<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/lllayout"
    android:orientation="vertical"
    tools:mContext=".activity.ChangePasswordActivity">

    <include android:id="@+id/toolbarForgetPass"
        layout="@layout/customtoolbar"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/viewLineColor">
    </View>
    <LinearLayout
    android:layout_width="match_parent"
         android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">
    <com.yellowseed.customView.EditTextArial
        android:id="@+id/etOldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_transparent"
        android:padding="@dimen/_10sdp"
        android:inputType="textPassword"
        android:maxLength="16"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:hint="@string/oldpassword"
        style="@style/marginleftright" />
    <com.yellowseed.customView.CustomRobotoRegularTextView2
        android:id="@+id/tvOldPasswordError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/marginleftright"
        android:textColor="@color/red"
        android:visibility="gone"
        android:textSize="@dimen/_8sdp"/>
    <com.yellowseed.customView.EditTextArial
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_transparent"
        android:singleLine="true"
        android:inputType="textPassword"
        android:maxLength="16"
        android:hint="@string/newpassowrd"
        android:imeOptions="actionNext"
        style="@style/marginleftright"
        android:padding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"/>
    <com.yellowseed.customView.CustomRobotoRegularTextView2
        android:id="@+id/tvNewPasswordError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/marginleftright"
        android:visibility="gone"
        android:textColor="@color/red"
        android:textSize="@dimen/_8sdp"/>
    <com.yellowseed.customView.EditTextArial
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/marginleftright"
        android:padding="@dimen/_10sdp"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:inputType="textPassword"
        android:maxLength="16"
        android:background="@drawable/bg_rounded_transparent"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/confirmpass"/>
    <com.yellowseed.customView.CustomRobotoRegularTextView2
        android:id="@+id/tvConfirmPasswordError"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="wrap_content"
        style="@style/marginleftright"
        android:textColor="@color/red"
        android:textSize="@dimen/_8sdp"/>
    <Button
        android:id="@+id/submit_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/marginleftright"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/bg_yellow"
        android:text="@string/submit"/>

</LinearLayout>
</LinearLayout>
</layout>